streamlit-app/streamlit-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-ingress
  namespace: default
spec:
  rules:
  - host: streamlit.ujstor.com
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: streamlit-service
            port: 
              number: 8501
